k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keystone
  labels:
    name: keystone
    app: hmas
    environment: production
